--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,13 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
            <!--  nav here -->
+            <% if user_signed_in? %>
+              <li><%= link_to 'Edit account', edit_user_path %></li>
+              <li><%= link_to 'Sign out', signout_path, :method=> :delete %></li>
+            <% else %>
+              <li><%= link_to 'Sign in', new_session_path %></li>
+              <li><%= link_to 'Sign up', new_user_path %></li>
+            <% end %>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
