--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,16 +25,20 @@
           <ul class="nav navbar-nav">
            <!--  nav here -->
             <% if user_signed_in? %>
-              <li><%= link_to 'Edit account', edit_user_path %></li>
-              <li><%= link_to 'Sign out', signout_path, :method=> :delete %></li>
+              <li><%= link_to 'Log Out', signout_path, :method => :delete %></li>
+              <li><%= link_to 'See attractions', attractions_path %></li>
             <% else %>
-              <li><%= link_to 'Sign in', new_session_path %></li>
+              <li><%= link_to 'Sign in', signin_path %></li>
               <li><%= link_to 'Sign up', new_user_path %></li>
             <% end %>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
+
+    <%= content_tag(:div, flash[:error], :id => "flash_error", class: ["alert", "alert-info"]) if flash[:error] %>
+    <%= content_tag(:div, flash[:notice], :id => "flash_notice", class: ["alert", "alert-info"]) if flash[:notice] %>
+    <%= content_tag(:div, flash[:alert], :id => "flash_alert", class: ["alert", "alert-info"]) if flash[:alert] %>
 
     <!-- content -->
     <div class="container"  role="main">
