--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,3 +4,6 @@
 <p>Nausea: <%= @user.nausea %></p>
 <p>Mood: <%= @user.mood %></p>
 <p>Tickets: <%= @user.tickets %></p>
+<% if @user.admin %>
+  <p>ADMIN</p>
+<% end %>
